[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/discord.png" type="Texture" id=1]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/MenuAudio.gd" type="Script" id=2]
[ext_resource path="res://Scenes/thrishaStuff/Audio/MouseClick.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/thrishaStuff/Audio/Menu/George Street Shuffle.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/thrishaStuff/images/mainMenu/returnButton.png" type="Texture" id=5]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Discord.gd" type="Script" id=6]

[node name="discord" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 962, 515 )
scale = Vector2( 1.11759, 1.11759 )
texture = ExtResource( 1 )

[node name="return" type="Sprite" parent="."]
position = Vector2( 1790, 953 )
texture = ExtResource( 5 )
offset = Vector2( -830, -413 )

[node name="returnButton" type="Button" parent="return"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.956
anchor_top = 0.89
anchor_right = 0.964
anchor_bottom = 0.911
margin_left = -2082.52
margin_top = -1061.2
margin_right = -1534.88
margin_bottom = -768.88
rect_rotation = -35.4283
rect_pivot_offset = Vector2( 211, 110 )
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 3 )

[node name="MenuAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -3.0
script = ExtResource( 2 )

[connection signal="button_down" from="return/returnButton" to="." method="_on_returnButton_button_down"]
[connection signal="mouse_entered" from="return/returnButton" to="." method="_on_returnButton_mouse_entered"]
[connection signal="mouse_exited" from="return/returnButton" to="." method="_on_returnButton_mouse_exited"]
[connection signal="pressed" from="return/returnButton" to="." method="_on_returnButton_pressed"]
